Changed the JUnit dependencies because of ClassNotFoundException.

--- a/CucumberPractice/pom.xml
+++ b/CucumberPractice/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -16,25 +15,27 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
-	
+
 	<dependencies>
 
 		<!-- https://mvnrepository.com/artifact/com.sun/tools -->
 		<dependency>
 			<groupId>com.sun</groupId>
 			<artifactId>tools</artifactId>
-			<version>1.5.0</version>
+			<version>1.8.0</version>
 			<scope>system</scope>
 			<systemPath>C:\Java\jdk1.8.0_161\lib\tools.jar</systemPath>
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+
 
 
 		<dependency>
@@ -106,5 +107,5 @@
 		</dependency>
 
 	</dependencies>
-	
+
 </project>
